--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.11.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^21.3.2",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
