--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.2.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "react": "^16.11.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^21.3.2",
@@ -15,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.3"
   },
   "scripts": {
